docs: models output

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     const blob = await removeBackground(imageSource, {
       debug: true,
-      model: '/models/small.onnx',
+      model: '/models/u2netp.onnx',
       resolution: 1024,
       wasmPaths: {
         'ort-wasm-simd.wasm': './node_modules/onnxruntime-web/dist/ort-wasm-simd.wasm',
